--- a/FreiRui/templates/post/list.html
+++ b/FreiRui/templates/post/list.html
@@ -2,6 +2,13 @@
 {% load markdown_deux_tags %}
 
 {% block content %}
+{% if user.is_authenticated %}
+<a href="{% url 'post_new' %}" class="top-menu" style="margin-top: 50px; display: block;">
+    <i class="far fa-plus-square fa-5x"></i>
+    <p> Criar post </p>
+</a>
+{% endif %}
+
 {% for post in posts %}
 <div class="post">
     <div class="date">
