--- a/FreiRui/static/style.css
+++ b/FreiRui/static/style.css
@@ -225,8 +225,23 @@ footer {
   background: #b7cde2 !important;
 }
 
-label[for="id_listing_type"] {
+label[for="id_listing_type"], label[for="id_galleries"] {
   display: none;
+}
+
+.post-forms {
+  display: flex;
+  flex-direction: column;
+  margin-top: 50px;
+}
+
+.post-forms p {
+  margin-bottom: 50px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  width: 70%;
+  align-self: center;
 }
 
 /* // Dispositivos extra small (telefones em modo retrato, com menos de 576px) */
