--- a/FreiRui/templates/post/list_cards.html
+++ b/FreiRui/templates/post/list_cards.html
@@ -1,20 +1,26 @@
 {% extends 'base.html' %}
-{% load markdown_deux_tags %}
 
 {% block content %}
 {% if user.is_authenticated %}
-<a href="{% url 'post_new' %}" class="top-menu" style="margin-top: 50px; display: block;">
-    <i class="far fa-plus-square fa-5x"></i>
-    <p> Criar post </p>
-</a>
+<span style="display: flex; flex-direction: row; justify-content: space-evenly;">
+    <a href="{% url 'post_new' %}" class="top-menu"
+        style="margin-top: 50px; display: flex; flex-direction: column; align-items: center;"> <i
+            class="far fa-plus-square fa-5x"></i>
+        <p> criar postagem </p>
+    </a>
+    <a href="{% url 'category_new' %}" class="top-menu"
+        style="margin-top: 50px; display: flex; flex-direction: column; align-items: center;"> <i
+            class="far fa-plus-square fa-5x"></i>
+        <p> Criar Categoria </p>
+    </a>
+</span>
 {% endif %}
 
 <section>
 
     <div style="padding-bottom: 30px; padding-top: 30px;" class="d-flex justify-content-center h1-quemsomos">
-        <h1>Poesias do Frei Rui Guido Depiné
-
-
+        <h1>
+            {{ category.title }}
         </h1>
     </div>
 
@@ -31,7 +37,7 @@
                         <div class="btn-custom">
                             <button class="button-bb"
                                 onclick="(() => window.location.href = `{% url 'post_details' category=post.category pk=post.pk %}`)()">
-                                Ler Poesia
+                                Ler {{ post.category.short_name }}
                             </button>
                         </div>
                     </div>
